cmake_minimum_required(VERSION 3.10)# Название проектаproject(SnifferTests)# Устанавливаем стандарт C++set(CMAKE_CXX_STANDARD 11)set(CMAKE_CXX_STANDARD_REQUIRED True)# Путь к библиотеке gtestadd_subdirectory(../gtest/googletest-main ${CMAKE_BINARY_DIR}/gtest)# Добавляем тестируемое приложение (SnifferApp)include_directories(../SnifferApp)# Добавляем исполняемый файл для тестовadd_executable(SnifferTest SnifferTest.cpp)# Подключаем библиотеку gtest к SnifferTesttarget_link_libraries(SnifferTest gtest gtest_main)# Включаем объектный файл SnifferApp в SnifferTesttarget_link_libraries(SnifferTest ../SnifferApp/SnifferApp.cpp) 